--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "connect-redis": "^4.0.4",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.2",
+    "csurf": "^1.11.0",
     "express-session": "^1.17.1",
+    "helmet": "^3.23.1",
     "nanoid": "^3.1.9",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
